Bug Fix Horizontal Scrolling

--- a/Gallery Version/styles/main.css
+++ b/Gallery Version/styles/main.css
@@ -2,7 +2,6 @@ html,
 body {
   height: 100%;
   margin: 0;
-  scroll-behavior: smooth;
 
   body {
     background-color: #181818;
